--- a/style.css
+++ b/style.css
@@ -11,3 +11,10 @@ body{
 h1{
     background-color:white;
 }
+
+.cabecalho_menu-hamburguer {
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    background-image: url();
+}
